--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.156.1",
-    "three-stdlib": "^2.26.0"
+    "three-stdlib": "^2.26.0",
+    "web-ifc-three": "^0.0.126"
   },
   "devDependencies": {
     "@types/react": "^18.2.18",
