--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.83.9",
-    "@react-three/fiber": "^8.14.1",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.15.24",
     "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.156.1",
+    "react-transition-group": "^4.4.5",
+    "three": "^0.172.0",
+    "three-mesh-bvh": "^0.9.0",
     "three-stdlib": "^2.26.0",
-    "web-ifc-three": "^0.0.126"
+    "web-ifc-three": "^0.0.129"
   },
   "devDependencies": {
     "@types/react": "^18.2.18",
